# server.ts
@@ -39,7 +39,6 @@ import TaxonomyDAO from './src/models/Taxonomy/TaxonomyDAO'
 const basePath = process.env.BASE_PATH || '/services'
 const app = express()
 const PORT = process.env.PORT
-
 const ECLUDED_PATHS: string[] = [
     '/health',
     `${basePath}/swagger`,
@@ -75,7 +74,7 @@ Promise.all([
     pathBDTOInstance.registerRoutes(app, ECLUDED_PATHS),
 ]).then(() => {
     app.listen(PORT, () => {
-        console.log("Service Providers Service is running on port " + PORT)
+        console.log("Listening servers")
     })
 }).catch(err => console.log(err))
 
